--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="boite" prefHeight="100.0" prefWidth="298.0" style="-fx-border-color: black;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemOrdreMissionController">
+<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="298.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemOrdreMissionController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -43,4 +44,8 @@
          </VBox.margin>
       </GridPane>
    </children>
+   <stylesheets>
+      <URL value="@../style.css" />
+      <URL value="@../hover.css" />
+   </stylesheets>
 </VBox>
