--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
@@ -2,47 +2,25 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="298.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemOrdreMissionController">
+<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="75.0" prefWidth="298.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemOrdreMissionController">
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <HBox prefHeight="75.0" prefWidth="298.0">
          <children>
-            <Label fx:id="lieuLabel" prefHeight="50.0" prefWidth="100.0" text="Limoges">
+            <Label fx:id="lieuLabel" prefHeight="75.0" prefWidth="100.0" text="Limoges">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label fx:id="datesLabel" prefHeight="50.0" prefWidth="200.0" text="Du 12/00/0000 au 00/00/0000" />
-         </children>
-      </HBox>
-      <GridPane>
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" onAction="#afficherOrdreMissionPDF" prefWidth="75.0" text="Afficher" />
-            <Button mnemonicParsing="false" onAction="#modifierOM" prefWidth="75.0" text="Modifier" GridPane.columnIndex="1" />
-            <Button fx:id="boutonEnvoyer" mnemonicParsing="false" onAction="#afficherEnvoiMail" prefHeight="27.0" prefWidth="81.0" text="Envoyer" GridPane.columnIndex="2" />
-            <Button fx:id="boutonSigner" mnemonicParsing="false" onAction="#signerOM" prefHeight="27.0" prefWidth="81.0" text="Signer" GridPane.columnIndex="2" />
+            <Label fx:id="datesLabel" prefHeight="75.0" prefWidth="200.0" text="Du 12/00/0000 au 00/00/0000" />
          </children>
          <VBox.margin>
-            <Insets left="15.0" />
+            <Insets />
          </VBox.margin>
-      </GridPane>
+      </HBox>
    </children>
    <stylesheets>
       <URL value="@../style.css" />
