--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -8,41 +9,41 @@
 
 <AnchorPane fx:id="pageMail" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MailController">
    <children>
-      <HBox layoutX="88.0" layoutY="75.0">
+      <HBox layoutX="98.0" layoutY="25.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" Expéditeur :  " />
+            <TextField fx:id="expediteur" prefHeight="25.0" prefWidth="180.0" />
+         </children>
+      </HBox>
+      <Text layoutX="137.0" layoutY="71.0" scaleX="0.8" scaleY="0.8" scaleZ="0.8" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;" />
+      <HBox layoutX="82.0" layoutY="73.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destinataire(s) : " />
             <TextField fx:id="destinataires" prefHeight="25.0" prefWidth="180.0" />
          </children>
       </HBox>
-      <HBox layoutX="118.0" layoutY="112.0">
+      <HBox layoutX="115.0" layoutY="111.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="En copie : " />
             <TextField fx:id="destEnCopie" prefHeight="25.0" prefWidth="180.0" />
          </children>
       </HBox>
-      <HBox layoutX="134.0" layoutY="149.0">
+      <HBox layoutX="132.0" layoutY="149.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Objet : " />
             <TextField fx:id="objetDuMail" prefHeight="25.0" prefWidth="180.0" />
          </children>
       </HBox>
-      <HBox layoutX="134.0" layoutY="189.0">
+      <HBox layoutX="129.0" layoutY="189.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Corps : " />
-            <TextField fx:id="corpsDuMail" alignment="TOP_LEFT" prefHeight="126.0" prefWidth="180.0" />
+            <TextArea fx:id="corpsDuMail" prefHeight="115.0" prefWidth="250.0" />
          </children>
       </HBox>
       <HBox layoutX="426.0" layoutY="352.0">
          <children>
             <!--  <Button mnemonicParsing="false" onAction="#annulerMail" text="Annuler" />-->
             <Button mnemonicParsing="false" onAction="#envoyerMail" text="Envoyer" />
-         </children>
-      </HBox>
-      <Text layoutX="170.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;" />
-      <HBox layoutX="98.0" layoutY="25.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" Expéditeur :  " />
-            <TextField fx:id="expediteur" prefHeight="25.0" prefWidth="180.0" />
          </children>
       </HBox>
    </children>
