--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Agent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Agent.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.AgentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.AgentController">
    <children>
-      <GridPane fx:id="grilleTop" prefHeight="400.0" prefWidth="600.0">
+      <GridPane fx:id="grilleTop" layoutX="5.0" prefHeight="550.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="470.0" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="435.0" minWidth="10.0" prefWidth="300.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
@@ -26,12 +26,12 @@
          <children>
             <Label stylesheets="@../style.css" text="Nom :">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="nomTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="126.0">
                <GridPane.margin>
-                  <Insets left="155.0" />
+                  <Insets left="200.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Prénom :" GridPane.columnIndex="1">
@@ -46,12 +46,12 @@
             </TextField>
             <Label text="Fonction :" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="fonctionTextField" maxWidth="150.0" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="155.0" />
+                  <Insets left="200.0" />
                </GridPane.margin>
             </TextField>
             <Label text="N° CAPSSA :" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -66,12 +66,12 @@
             </TextField>
             <Label text="Résidence Administrative :" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="residenceAdminTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="161.0" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets left="155.0" />
+                  <Insets left="200.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Coefficient :" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -86,12 +86,12 @@
             </TextField>
             <Label text="Unité de travail :" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="uniteTavailTextField" maxWidth="150.0" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="155.0" />
+                  <Insets left="200.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Code analytique :" GridPane.columnIndex="1" GridPane.rowIndex="3">
