--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="pageMail" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MailController">
@@ -15,7 +16,10 @@
             <TextField fx:id="expediteur" prefHeight="25.0" prefWidth="180.0" />
          </children>
       </HBox>
-      <Text layoutX="137.0" layoutY="71.0" scaleX="0.8" scaleY="0.8" scaleZ="0.8" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;" />
+      <Text layoutX="176.0" layoutY="71.0" scaleZ="0.8" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;">
+         <font>
+            <Font size="10.0" />
+         </font></Text>
       <HBox layoutX="82.0" layoutY="73.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destinataire(s) : " />
