--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mission.fxml
@@ -11,21 +11,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MissionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MissionController">
    <children>
-      <VBox fx:id="pageVBox" prefHeight="400.0" prefWidth="600.0">
+      <VBox fx:id="pageVBox" alignment="CENTER" prefHeight="550.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <RadioButton fx:id="ordrePermanentRadioBtn" mnemonicParsing="false" onAction="#ordrePermanentRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" text="Ordre de mission permanent (dans la fonction indiqué avant)">
+            <RadioButton fx:id="ordrePermanentRadioBtn" mnemonicParsing="false" onAction="#ordrePermanentRadioBtnSelectionne" prefHeight="50.0" prefWidth="700.0" text="Ordre de mission permanent (dans la fonction indiqué avant)">
                <toggleGroup>
                   <ToggleGroup fx:id="typeOmToggleG" />
                </toggleGroup>
                <VBox.margin>
-                  <Insets left="70.0" />
+                  <Insets left="110.0" />
                </VBox.margin>
             </RadioButton>
-            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOmToggleG">
+            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="700.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOmToggleG">
                <VBox.margin>
-                  <Insets left="70.0" />
+                  <Insets left="110.0" />
                </VBox.margin></RadioButton>
             <HBox fx:id="missionPonctuelHBox" prefWidth="600.0">
                <children>
@@ -43,12 +43,12 @@
                   </DatePicker>
                </children>
                <VBox.margin>
-                  <Insets left="70.0" top="10.0" />
+                  <Insets left="110.0" top="10.0" />
                </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
-                  <Label prefHeight="50.0" prefWidth="150.0" text="Motif du déplacement :">
+                  <Label prefHeight="50.0" prefWidth="173.0" text="Motif du déplacement :">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin></Label>
@@ -59,12 +59,12 @@
                   </TextField>
                </children>
                <VBox.margin>
-                  <Insets left="70.0" />
+                  <Insets left="110.0" />
                </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
-                  <Label prefHeight="50.0" prefWidth="150.0" text="Lieu du déplacement :" />
+                  <Label prefHeight="50.0" prefWidth="161.0" text="Lieu du déplacement :" />
                   <TextField fx:id="lieuDeplacementTextField" prefWidth="150.0">
                      <HBox.margin>
                         <Insets top="13.0" />
@@ -72,16 +72,19 @@
                   </TextField>
                </children>
                <VBox.margin>
-                  <Insets left="70.0" />
+                  <Insets left="110.0" />
                </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
                   <Label prefHeight="50.0" prefWidth="81.0" text="Au titre de :" />
-                  <RadioButton fx:id="fonctionHabituelleRadioBtn" mnemonicParsing="false" prefHeight="50.0" prefWidth="147.0" selected="true" text="La fonction habituelle">
+                  <RadioButton fx:id="fonctionHabituelleRadioBtn" mnemonicParsing="false" prefHeight="50.0" prefWidth="177.0" selected="true" text="La fonction habituelle">
                      <toggleGroup>
                         <ToggleGroup fx:id="titreToggleG" />
                      </toggleGroup>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
                   </RadioButton>
                   <RadioButton fx:id="formationRadioBtn" mnemonicParsing="false" prefHeight="50.0" text="La formation" toggleGroup="$titreToggleG">
                      <HBox.margin>
@@ -89,13 +92,19 @@
                      </HBox.margin></RadioButton>
                </children>
                <VBox.margin>
-                  <Insets left="70.0" />
+                  <Insets left="110.0" />
                </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0" spacing="35.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#retournerAInfoPerso" prefHeight="13.0" prefWidth="80.0" text="&lt;&lt; Retour" />
-                  <Button mnemonicParsing="false" onAction="#passerAMoyenTransport" text="Suivant &gt;&gt;" />
+                  <Button mnemonicParsing="false" onAction="#retournerAInfoPerso" prefHeight="30.0" prefWidth="100.0" text="&lt;&lt; Retour">
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin></Button>
+                  <Button mnemonicParsing="false" onAction="#passerAMoyenTransport" prefHeight="30.0" prefWidth="100.0" text="Suivant &gt;&gt;">
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin></Button>
                </children>
                <padding>
                   <Insets left="275.0" />
