--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
@@ -8,18 +8,18 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.OptionsController">
    <children>
-      <TextField fx:id="textFieldCheminDossierOM" layoutX="258.0" layoutY="60.0" maxWidth="200.0" />
-      <Label layoutX="35.0" layoutY="65.0" text="Chemin vers les ordres de mission :" />
+      <TextField fx:id="textFieldCheminDossierOM" layoutX="258.0" layoutY="60.0" maxWidth="200.0" prefHeight="25.0" prefWidth="149.0" />
+      <Label layoutX="18.0" layoutY="65.0" prefHeight="19.0" prefWidth="240.0" text="Chemin vers les ordres de mission :" />
       <Button layoutX="419.0" layoutY="60.0" mnemonicParsing="false" onAction="#choisirCheminDossierMission" text="..." />
       <Button layoutX="225.0" layoutY="332.0" mnemonicParsing="false" onAction="#sauvegarder" text="Sauvegarder les options" />
-      <Label layoutX="35.0" layoutY="178.0" text="Modifier vos coordonnées :" />
+      <Label layoutX="19.0" layoutY="178.0" prefHeight="19.0" prefWidth="240.0" text="Modifier vos coordonnées :" />
       <Button layoutX="258.0" layoutY="173.0" mnemonicParsing="false" onAction="#modifierAgent" text="Modifier" />
       <TextField fx:id="textFieldCheminSignature" layoutX="258.0" layoutY="119.0" maxWidth="200.0" />
-      <Label layoutX="35.0" layoutY="124.0" text="Chemin votre signature :" />
+      <Label layoutX="19.0" layoutY="124.0" prefHeight="19.0" prefWidth="240.0" text="Chemin votre signature :" />
       <Button layoutX="419.0" layoutY="119.0" mnemonicParsing="false" onAction="#choisirCheminSignature" text="..." />
-      <Label layoutX="35.0" layoutY="229.0" text="Votre adresse mail :" />
+      <Label layoutX="19.0" layoutY="229.0" prefHeight="19.0" prefWidth="240.0" text="Votre adresse mail :" />
       <TextField fx:id="textFieldMailAgent" layoutX="258.0" layoutY="224.0" prefHeight="27.0" prefWidth="250.0" />
-      <Label layoutX="35.0" layoutY="278.0" text="Mail de votre/vos responsable(s)" />
+      <Label layoutX="18.0" layoutY="278.0" prefHeight="19.0" prefWidth="240.0" text="Mail de votre/vos responsable(s)" />
       <ChoiceBox fx:id="selectMailResponsable" layoutX="258.0" layoutY="273.0" prefHeight="27.0" prefWidth="203.0" />
       <Button layoutX="469.0" layoutY="273.0" mnemonicParsing="false" onAction="#ajouterResponsable" text="+" />
    </children>
