--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
@@ -14,14 +14,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.TransportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.TransportController">
    <children>
-      <VBox fx:id="page" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0">
+      <VBox fx:id="page" alignment="TOP_CENTER" prefHeight="550.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label id="titre" alignment="CENTER" prefHeight="27.0" prefWidth="611.0" style="-fx-font-size: 17px;" styleClass="titre" text="Moyen de transport autorisé">
+            <Label id="titre" alignment="CENTER" prefHeight="27.0" prefWidth="611.0" style="-fx-font-size: 20;" styleClass="titre" text="Moyen de transport autorisé">
                <font>
                   <Font size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
             </Label>
             <HBox alignment="CENTER" prefHeight="79.0" prefWidth="600.0">
                <children>
@@ -52,7 +55,7 @@
                   <RadioButton fx:id="autreRadioBtn" mnemonicParsing="false" onAction="#autreSelectionne" text="Autre" toggleGroup="$moyenTransport" />
                </children>
             </HBox>
-            <GridPane fx:id="detailsVoiture" prefHeight="101.0" prefWidth="400.0" vgap="20.0">
+            <GridPane fx:id="detailsVoiture" prefHeight="144.0" prefWidth="700.0" vgap="20.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="476.0" minWidth="10.0" prefWidth="302.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.0" minWidth="10.0" prefWidth="300.0" />
@@ -94,7 +97,7 @@
                         <Insets right="150.0" />
                      </GridPane.margin>
                   </TextField>
-                  <RadioButton fx:id="vehiculeServiceRadioBtn" mnemonicParsing="false" prefHeight="17.0" prefWidth="232.0" text="Utilisation de véhicule de service" GridPane.rowIndex="3">
+                  <RadioButton fx:id="vehiculeServiceRadioBtn" mnemonicParsing="false" prefHeight="19.0" prefWidth="253.0" text="Utilisation de véhicule de service" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
@@ -116,13 +119,19 @@
                      </toggleGroup></RadioButton>
                   <RadioButton fx:id="train2emeClasseRadioBtn" mnemonicParsing="false" text="2ème classe" toggleGroup="$classeTrain" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="25.0" />
+               </VBox.margin>
             </HBox>
             <VBox fx:id="cramcoVBox" prefWidth="100.0">
                <children>
-                  <Label id="titre" alignment="CENTER" prefHeight="25.0" prefWidth="606.0" style="-fx-font-size: 17;" styleClass="titre" text="Billet pris par la C.R.A.M.C.O.">
+                  <Label id="titre" alignment="CENTER" prefHeight="25.0" prefWidth="706.0" style="-fx-font-size: 20;" styleClass="titre" text="Billet pris par la C.R.A.M.C.O.">
                      <font>
                         <Font size="16.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0" spacing="15.0">
                      <children>
@@ -160,7 +169,7 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#retournerATypeOM" prefWidth="75.0" text="Retour">
                      <HBox.margin>
-                        <Insets left="-30.0" top="25.0" />
+                        <Insets top="25.0" />
                      </HBox.margin></Button>
                   <Button fx:id="boutonSigner" mnemonicParsing="false" onAction="#signerOM" prefWidth="75.0" text="Signer">
                      <HBox.margin>
@@ -175,6 +184,9 @@
                <padding>
                   <Insets left="200.0" top="10.0" />
                </padding>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
