--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="298.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
+<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="347.0" style="-fx-border-color: black;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
    <children>
       <HBox prefHeight="25.0" prefWidth="200.0">
          <children>
@@ -39,7 +38,7 @@
             </Label>
          </children>
       </HBox>
-      <Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0" prefWidth="298.0" text="Du 12/00/0000 au 00/00/0000">
+      <Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0" prefWidth="345.0" text="Du 12/00/0000 au 00/00/0000">
          <font>
             <Font size="13.0" />
          </font>
@@ -63,8 +62,4 @@
          </VBox.margin>
       </GridPane>
    </children>
-   <stylesheets>
-      <URL value="@../style.css" />
-      <URL value="@../hover.css" />
-   </stylesheets>
 </VBox>
