--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="400.0" minWidth="-Infinity" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ListeMissionsResponsableController">
+<AnchorPane minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ListeMissionsResponsableController">
    <children>
-      <VBox minHeight="400.0" minWidth="-Infinity" prefWidth="300.0">
+      <VBox minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0">
          <children>
-            <Label alignment="CENTER" prefHeight="50.0" prefWidth="300.0" text="Liste des missions à signer" textAlignment="CENTER">
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="351.0" text="Liste des missions à signer" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <ScrollPane hbarPolicy="NEVER" minHeight="350.0" prefHeight="350.0" prefWidth="300.0">
+            <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="350.0">
                <content>
                   <VBox fx:id="listeOmVBox" prefWidth="300.0" />
                </content>
