--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/RootLayout.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.RootLayoutController">
+<BorderPane prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.RootLayoutController">
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -39,9 +39,9 @@
    <left>
       <GridPane fx:id="gridRoot" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="298.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="350.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-            <ColumnConstraints hgrow="SOMETIMES" prefWidth="602.0" />
+            <ColumnConstraints hgrow="SOMETIMES" prefWidth="550.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -49,52 +49,52 @@
          <children>
             <VBox fx:id="boxMenu" prefHeight="200.0" prefWidth="150.0" stylesheets="@../menu.css" GridPane.columnIndex="1">
                <children>
-                  <VBox id="hov" fx:id="boxOM" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
+                  <VBox id="hov" fx:id="boxOM" prefHeight="100.0" prefWidth="150.0" stylesheets="@../hover.css">
                      <children>
                         <ImageView fx:id="imageOM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets left="55.0" />
+                              <Insets left="55.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Ordres de mission">
+                        <Label alignment="CENTER" prefHeight="64.0" prefWidth="150.0" text="Ordres de mission">
                            <padding>
                               <Insets bottom="15.0" top="15.0" />
                            </padding>
                         </Label>
                      </children>
                   </VBox>
-                  <VBox id="hov" fx:id="boxFM" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
+                  <VBox id="hov" fx:id="boxFM" prefHeight="100.0" prefWidth="150.0" stylesheets="@../hover.css">
                      <children>
                         <ImageView fx:id="imageFM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets left="55.0" />
+                              <Insets left="55.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Frais de mission">
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="150.0" text="Frais de mission">
                            <padding>
                               <Insets bottom="15.0" top="15.0" />
                            </padding>
                         </Label>
                      </children>
                   </VBox>
-                  <VBox id="hov" fx:id="boxHT" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
+                  <VBox id="hov" fx:id="boxHT" prefHeight="100.0" prefWidth="150.0" stylesheets="@../hover.css">
                      <children>
                         <ImageView fx:id="imageHT" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets left="55.0" />
+                              <Insets left="55.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Horaires de travail" />
+                        <Label alignment="CENTER" prefHeight="52.0" prefWidth="150.0" text="Horaires de travail" />
                      </children>
                   </VBox>
-                  <VBox id="hov" fx:id="boxParam" onMouseClicked="#modifierOptions" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
+                  <VBox id="hov" fx:id="boxParam" onMouseClicked="#modifierOptions" prefHeight="100.0" prefWidth="150.0" stylesheets="@../hover.css">
                      <children>
                         <ImageView fx:id="imageParametre" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets left="55.0" />
+                              <Insets left="55.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Paramètres" />
+                        <Label alignment="CENTER" prefHeight="53.0" prefWidth="150.0" text="Paramètres" />
                      </children>
                   </VBox>
                </children>
