--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/MenuAgent.fxml
@@ -2,22 +2,29 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="350.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MenuAgentController">
+<AnchorPane minWidth="-Infinity" prefHeight="550.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MenuAgentController">
    <children>
-      <VBox prefHeight="500.0" prefWidth="350.0">
+      <VBox prefHeight="550.0" prefWidth="350.0">
          <children>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="350.0">
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="361.0" text="Liste des ordres de mission" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ScrollPane hbarPolicy="NEVER" minWidth="-Infinity" prefHeight="430.0" prefWidth="273.0">
                <content>
                   <VBox fx:id="listeOmVBox" />
                </content>
             </ScrollPane>
-            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="29.0" prefWidth="242.0" text="Créer un nouvel ordre de mission">
+            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="29.0" prefWidth="163.0" stylesheets="@../style.css" text="Créer une mission">
                <VBox.margin>
-                  <Insets left="55.0" top="25.0" />
+                  <Insets left="90.0" top="20.0" />
                </VBox.margin>
             </Button>
          </children>
