--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mission.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MissionController">
    <children>
-      <VBox fx:id="pageVBox" alignment="CENTER" prefHeight="550.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="pageVBox" alignment="CENTER" layoutY="38.0" prefHeight="512.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="38.0">
          <children>
             <RadioButton fx:id="ordrePermanentRadioBtn" mnemonicParsing="false" onAction="#ordrePermanentRadioBtnSelectionne" prefHeight="50.0" prefWidth="700.0" text="Ordre de mission permanent (dans la fonction indiqué avant)">
                <toggleGroup>
@@ -110,7 +110,7 @@
                   <Insets left="275.0" />
                </padding>
                <VBox.margin>
-                  <Insets left="100.0" top="10.0" />
+                  <Insets left="100.0" top="50.0" />
                </VBox.margin>
             </HBox>
          </children>
