affichage ajout horaire et suppression horaire

--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
@@ -41,12 +41,12 @@
             <HBox prefHeight="29.0" prefWidth="800.0">
                <children>
                   <HBox prefHeight="29.0" prefWidth="400.0" />
-                  <Button mnemonicParsing="false" onAction="#btnSupprimerHoraire" text="Supprimer">
+                  <Button mnemonicParsing="false" onAction="#supprimerHoraire" text="Supprimer">
                      <HBox.margin>
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#btnAjouterHoraire" text="Ajouter">
+                  <Button mnemonicParsing="false" onAction="#ajoutHoraire" text="Ajouter">
                      <HBox.margin>
                         <Insets right="10.0" />
                      </HBox.margin>
